2003-02-20  Bradley Bell <btb@icculus.org>

	* Makefile.am, tools/cvs2cl/cvs2cl.pl: get rid of cvs2cl.pl
	* compilerdefs.txt: added linux/mips info
	* ChangeLog: clean up changelog

2003-02-19  Bradley Bell <btb@icculus.org>

	* libmve/mveplay.c: os x needs nanosleep prototype.

2003-02-18  Bradley Bell <btb@icculus.org>

	* .cvsignore, libmve/.cvsignore: added files to .cvsignore
	* include/libmve.h, libmve/mveplay.c, main/movie.c: added function
	to disable/enable audio
	* libmve/: mve_main.c, mveplay.c: bigendian fixes
	* main/: movie.h, titles.c: make sure movie's palette is set before
	writing briefing text.	Fixes bug #359
	* libmve/mveplay.c: make MVE_rmStepMovie play a full frame instead
	of a chunk
	* misc/: args.c, byteswap.c, d_delay.c, d_io.c, dos_disk.h,
	error.c, hash.c, parsarg.c, parsarg.h, strio.c, strutil.c:
	formatting
	* maths/: fix.asm, rand.c, tables.c, vecmat.c, vecmata.asm:
	formatting
	* texmap/: ntmap.c, scanline.c, scanline.h, texmapl.h,
	tmap_flt.asm, tmap_inc.asm, tmap_lin.asm, tmap_ll.asm,
	tmap_per.asm, tmapfade.asm, tmapflat.c, tmappent.S, tmapppro.S:
	formatting
	* include/libmve.h: blah

2003-02-18  Martin Schaffner <martin.schaffner@epfl.ch>

	* main/render.c: 2nd attempt to fix solaris qsort bug

2003-02-18  Bradley Bell <btb@icculus.org>

	* configure.ac, include/pstypes.h: put alignment detection in
	configure.ac

2003-02-17  Bradley Bell <btb@icculus.org>

	* Makefile.am, README.utils, configure.ac, include/libmve.h,
	include/mve_audio.h, include/mvelib.h, libmve/Makefile.am,
	libmve/decoder16.c, libmve/decoder8.c, libmve/mve_audio.c,
	libmve/mve_audio.h, libmve/mve_main.c, libmve/mvelib.c,
	libmve/mvelib.h, libmve/mveplay.c, main/Makefile.am,
	main/decoder16.c, main/decoder8.c, main/movie.c, main/mve_audio.c,
	main/mve_main.c, main/mvelib.c, main/mveplay.c, main/mveplay.h:
	moved mve stuff to separate subdir
	* include/mvelib.h, main/movie.c, main/mve_main.c, main/mvelib.c,